[package]
name = "microbit-two"
version = "0.1.0"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-graphics = { version = "0.7", optional = true}
nrf52833-pac = "0.10"
nrf52833-hal = "0.14"
panic-probe = "0.3"
profont = { version = "0.5", optional = true}

[features]
# set logging levels here
default = [
  "graphics",
]

graphics = ["embedded-graphics", "profont"]